--- a/EnglishHelper/EnglishHelper.Client/PopupWindow.xaml
+++ b/EnglishHelper/EnglishHelper.Client/PopupWindow.xaml
@@ -19,23 +19,30 @@
             <Border.Background>
                 <SolidColorBrush Color="Black" Opacity="0.7"/>
             </Border.Background>
+            
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="29*"></RowDefinition>
-                    <RowDefinition Height="72*"></RowDefinition>
+                    <RowDefinition Height="9*"></RowDefinition>
+                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="24*"></RowDefinition>
                     <RowDefinition Height="auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                
-                <Grid Grid.Row="0">
+
+                <Grid Grid.Row="0" Grid.RowSpan="2">
                     <TextBlock x:Name="title" Text="Title" Padding="15" 
-                           FontFamily="Comic Sans MS" FontSize="13" Foreground="White" Margin="0,-9,0,0"/>
+                               FontFamily="Comic Sans MS" FontSize="13" 
+                               Foreground="White" Margin="0,-9,0,0"/>
 
                     <Button x:Name="closeButton" HorizontalAlignment="Left" Margin="265,4,0,0" VerticalAlignment="Top" Width="21" RenderTransformOrigin="6.442,-0.357" BorderBrush="{x:Null}" Click="closeButton_Click" Background="{x:Null}" Foreground="White" Height="22">
                         <Image Source="Images/close64x64.png" HorizontalAlignment="Center" VerticalAlignment="Center" Width="21" Height="20" UseLayoutRounding="True"/>
                     </Button>
-                    
                 </Grid>
+                
                 <Grid Grid.Row="1">
+                    <Separator Margin="0,3,0,1"/>
+                </Grid>
+                
+                <Grid Grid.Row="2">
                     <TextBlock x:Name="message" VerticalAlignment="Center" FontSize="12" 
                                Foreground="White" HorizontalAlignment="Left" 
                                FontFamily="Comic Sans MS" Text="Message" TextWrapping="Wrap" 
